# squaddraft

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: clubs.py  draft.py  fits.py  formations.py  rooms.py
backend/app/core/: config.py  formations.py  positions.py  security.py
backend/app/db/: database.py  models.py  types.py
backend/app/schemas/: room.py
backend/app/services/: draft_service.py  evaluation_service.py  room_service.py  simulation_service.py  spin_service.py
backend/app/websockets/: manager.py
backend/tests/: conftest.py  seed.py  test_api.py  test_draft_flow.py
backend/tests/fixtures/: clubs.csv  player_eras.csv  players.csv  team_era_pools.csv
data/: .env.example  README.md  build_dataset.py  clubs.csv  formations.json  import_to_supabase.py  migrate.py  requirements.txt  run_pipeline.py  scrape_fbref.py  validate_positions.py
data/config/: club_map.json  spin_config.json
data/lib/: db_url.py  era.py  migrate.py  positions.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DraftTimer.tsx  FormationPitch.tsx  SpinMachine.tsx
frontend/lib/: api.ts  constants.ts
frontend/stores/: roomStore.ts
infra/: DEPLOY.md  docker-compose.yml
infra/terraform/: alb.tf  ecr.tf  ecs.tf  github_oidc.tf  iam.tf  network.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf
supabase/migrations/: 20240610000000_initial_schema.sql  (+4 more)
(+1 files in other folders)
